test_fm/_test50.nj
//
// method called with too many arguments
//


class Aux1 extends Object {
}


class Aux2 extends Aux1 {
}


public class Main extends Object {

  public static void main() {
    local Aux2 a;
    Main.f(a, a);
  }

  static void f(Aux2 x) {
  }

}
